bug 수정